--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.helping_hands_sponty">
+    package="com.sponty.helpinghands">
    <application
         android:label="helping_hands_sponty"
         android:name="${applicationName}"
