--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,24 +27,38 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  auto_route: ^3.2.2
+  bot_toast: ^4.0.1
+  cloud_firestore: ^3.1.6
+  cupertino_icons: ^1.0.4
+  firebase_auth: ^3.3.5
+  firebase_core: ^1.11.0
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.0.1
+  freezed: ^1.1.1
 
+  fpdart: ^0.0.14
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  geolocator: ^8.1.1
+  get_it: ^7.2.0
+
+  json_annotation: ^4.4.0
+
+  hydrated_bloc: ^8.0.0
+  path_provider: ^2.0.9
+  permission_handler: ^8.3.0
+  
+
+  
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
-  flutter_lints: ^1.0.0
+  auto_route_generator: ^3.2.1
+  build_runner: ^2.1.7
+  freezed_annotation: ^1.1.0
+  injectable_generator: ^1.5.3
+  json_serializable: ^6.1.4
+  flutter_lints: ^1.0.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
