--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,40 +29,33 @@ environment:
 dependencies:
   auto_route: ^3.2.2
   bot_toast: ^4.0.1
-  cloud_firestore: ^3.1.6
+  cloud_firestore: ^3.1.8
   cupertino_icons: ^1.0.4
-  firebase_auth: ^3.3.5
-  firebase_core: ^1.11.0
+  firebase_auth: ^3.3.7
+  firebase_core: ^1.12.0
   flutter:
     sdk: flutter
   flutter_bloc: ^8.0.1
-  freezed: ^1.1.1
-
   fpdart: ^0.0.14
-
+  freezed: ^1.1.1
   geolocator: ^8.1.1
   get_it: ^7.2.0
-
-  json_annotation: ^4.4.0
-
   hydrated_bloc: ^8.0.0
+  injectable: ^1.5.3
+  json_annotation: ^4.4.0
   path_provider: ^2.0.9
   permission_handler: ^8.3.0
-  
-
-  
 
 dev_dependencies:
   auto_route_generator: ^3.2.1
   build_runner: ^2.1.7
+  flutter_lints: ^1.0.4
   freezed_annotation: ^1.1.0
   injectable_generator: ^1.5.3
   json_serializable: ^6.1.4
-  flutter_lints: ^1.0.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
 # The following section is specific to Flutter.
 flutter:
 
@@ -70,18 +63,14 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
-
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
