--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   json_annotation: ^4.4.0
   path_provider: ^2.0.9
   permission_handler: ^8.3.0
+  rxdart: ^0.27.3
 
 dev_dependencies:
   auto_route_generator: ^3.2.1
