--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,8 +39,10 @@ dependencies:
   flutter_map: ^0.14.0
   fpdart: ^0.0.14
   freezed: ^1.1.1
+  geodesy: 0.4.0-nullsafety.0
   geolocator: ^8.1.1
   get_it: ^7.2.0
+  google_fonts: ^2.3.1
   hydrated_bloc: ^8.0.0
   injectable: ^1.5.3
   json_annotation: ^4.4.0
