--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   hydrated_bloc: ^8.0.0
   injectable: ^1.5.3
   json_annotation: ^4.4.0
+  marquee: ^2.2.0
   path_provider: ^2.0.9
   permission_handler: ^8.3.0
   rxdart: ^0.27.3
