--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^8.0.1
   flutter_map: ^0.14.0
+  flutter_svg: ^1.0.3
   fpdart: ^0.0.14
   freezed: ^1.1.1
   geodesy: 0.4.0-nullsafety.0
@@ -68,9 +69,9 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/svg/
+
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
   # For details regarding adding assets from package dependencies, see
