--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,9 @@ dependencies:
   bot_toast: ^4.0.1
   cloud_firestore: ^3.1.8
   cupertino_icons: ^1.0.4
+#  dart_ipify: ^1.1.
+  get_ip_address: ^0.0.5
+
   firebase_auth: ^3.3.7
   firebase_core: ^1.12.0
   flutter:
