--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   hydrated_bloc: ^8.0.0
   injectable: ^1.5.3
   json_annotation: ^4.4.0
+  lottie: ^1.2.1
   marquee: ^2.2.0
   path_provider: ^2.0.9
   permission_handler: ^8.3.0
@@ -74,6 +75,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/svg/
+    - assets/lottie/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
